# language-learning-flashcards

./: LICENSE  README.md  forvo_scraper.sh  pyproject.toml
docs/decks/most_common_words/: README.md
language_learning_flashcards/decks/most_common_words/: main.py
scripts/decks/most_common_words/: anki.py  main.py  pronunciation.py  utils.py
tests/: test_language_learning_flashcards.py
